@@ -1,106 +1,51 @@
-# Spring Boot application template
+# ccd-case-document-am-api
 
-[![Build Status](https://travis-ci.org/hmcts/spring-boot-template.svg?branch=master)](https://travis-ci.org/hmcts/spring-boot-template)
+[![API v1](https://img.shields.io/badge/API%20Docs-v1-e140ad.svg)](https://hmcts.github.io/reform-api-docs/swagger.html?url=https://hmcts.github.io/reform-api-docs/specs/document-management-store-app.json)
+[![Build Status](https://travis-ci.org/hmcts/ccd-case-document-am-api.svg?branch=master)](https://travis-ci.org/github/hmcts/ccd-case-document-am-api)
+[![Docker Build Status](https://img.shields.io/docker/build/hmcts/ccd-case-document-am-api.svg)](https://hub.docker.com/r/hmcts/ccd-case-document-am-api)
+[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)
 
 ## Purpose
 
-The purpose of this template is to speed up the creation of new Spring applications within HMCTS
-and help keep the same standards across multiple teams. If you need to create a new app, you can
-simply use this one as a starting point and build on top of it.
+The purpose of this application is to act as a proxy document management service to facilitate following access controls on case documents:
 
-## What's inside
+1) Applying CCD's configured access control policies to the upload of CCD case documents.
 
-The template is a working application with a minimal setup. It contains:
- * application skeleton
- * setup script to prepare project
- * common plugins and libraries
- * docker setup
- * swagger configuration for api documentation ([see how to publish your api documentation to shared repository](https://github.com/hmcts/reform-api-docs#publish-swagger-docs))
- * code quality tools already set up
- * integration with Travis CI
- * Hystrix circuit breaker enabled
- * MIT license and contribution information
- * Helm chart using chart-java.
+2) Applying CCD's configured access control policies to the download of CCD case documents.
 
-The application exposes health endpoint (http://localhost:4455/health) and metrics endpoint
-(http://localhost:4455/metrics).
+3) Protecting against unauthorised access to CCD case documents while being uploaded to, stored in, and downloaded from the case document repository. In both cases, access control will be applied as if the document were a 'standard' item of case data contained within the CCD case data store.
 
-## Plugins
+Users & services with sufficient permissions only will be able to upload, modify, delete and download documents.
 
-The template contains the following plugins:
+### Prerequisites
 
-  * checkstyle
+- [Open JDK 8](https://openjdk.java.net/)
+- [Docker](https://www.docker.com)
 
-    https://docs.gradle.org/current/userguide/checkstyle_plugin.html
+This service works with the DocStore Api and CaseData Api alongside their databases CCD Data Store and Document Management Store.
 
-    Performs code style checks on Java source files using Checkstyle and generates reports from these checks.
-    The checks are included in gradle's *check* task (you can run them by executing `./gradlew check` command).
+#### Environment variables
+The following environment variables are required:
 
-  * pmd
+| Name | Default | Description |
+|------|---------|-------------|
+      |CASE_DOCUMENT_S2S_AUTHORISED_SERVICES| ccd_case_document_am_api, ccd_gw, xui_webapp, ccd_data, bulk_scan_processor|
+      |REFORM_SERVICE_NAME| ccd-case-document-am-api|
+      |REFORM_TEAM| ccd
+      |REFORM_ENVIRONMENT| local
+      |S2S_SECRET|
+      |S2S_KEY| S2S_KEY
+      |CCD_DOCUMENT_API_IDAM_KEY|
+      |DEFINITION_STORE_HOST|
+      |USER_PROFILE_HOST|
+      |DOCUMENT_STORE_URL| http://dm-store:8080|
+      |CCD_DATA_STORE_URL| http://ccd-data-store-api:4452|
+      |AZURE_APPLICATIONINSIGHTS_INSTRUMENTATIONKEY|
+      |IDAM_USER_URL| http://idam-api:5000 |
+      |IDAM_S2S_URL| http://service-auth-provider-api:8080|
+      |JAVA_TOOL_OPTIONS| -XX:InitialRAMPercentage=30.0 -XX:MaxRAMPercentage=65.0 -XX:MinRAMPercentage=30.0 -XX:+UseConcMarkSweepGC -agentlib:jdwp=transport=dt_socket, server=y,suspend=n,address=5005
 
-    https://docs.gradle.org/current/userguide/pmd_plugin.html
-
-    Performs static code analysis to finds common programming flaws. Included in gradle `check` task.
-
-
-  * jacoco
-
-    https://docs.gradle.org/current/userguide/jacoco_plugin.html
-
-    Provides code coverage metrics for Java code via integration with JaCoCo.
-    You can create the report by running the following command:
-
-    ```bash
-      ./gradlew jacocoTestReport
-    ```
-
-    The report will be created in build/reports subdirectory in your project directory.
-
-  * io.spring.dependency-management
-
-    https://github.com/spring-gradle-plugins/dependency-management-plugin
-
-    Provides Maven-like dependency management. Allows you to declare dependency management
-    using `dependency 'groupId:artifactId:version'`
-    or `dependency group:'group', name:'name', version:version'`.
-
-  * org.springframework.boot
-
-    http://projects.spring.io/spring-boot/
-
-    Reduces the amount of work needed to create a Spring application
-
-  * org.owasp.dependencycheck
-
-    https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/index.html
-
-    Provides monitoring of the project's dependent libraries and creating a report
-    of known vulnerable components that are included in the build. To run it
-    execute `gradle dependencyCheck` command.
-
-  * com.github.ben-manes.versions
-
-    https://github.com/ben-manes/gradle-versions-plugin
-
-    Provides a task to determine which dependencies have updates. Usage:
-
-    ```bash
-      ./gradlew dependencyUpdates -Drevision=release
-    ```
-
-## Setup
-
-Located in `./bin/init.sh`. Simply run and follow the explanation how to execute it.
-
-## Notes
-
-Since Spring Boot 2.1 bean overriding is disabled. If you want to enable it you will need to set `spring.main.allow-bean-definition-overriding` to `true`.
-
-JUnit 5 is now enabled by default in the project. Please refrain from using JUnit4 and use the next generation
-
-## Building and deploying the application
-
-### Building the application
+## Building the application
 
 The project uses [Gradle](https://gradle.org) as a build tool. It already contains
 `./gradlew` wrapper script, so there's no need to install gradle.
@@ -110,96 +55,124 @@ To build the project execute the following command:
 ```bash
   ./gradlew build
 ```
-
-### Running the application
-
-Create the image of the application by executing the following command:
+To clean up your environment use the following, it will delete any temporarily generated files such as reports.
 
 ```bash
-  ./gradlew assemble
+  ./gradlew clean
 ```
+### Running
 
-Create docker image:
+If you want your code to become available to other Docker projects (e.g. for local environment testing), you need to build the image:
 
 ```bash
-  docker-compose build
+docker-compose build
 ```
 
-Run the distribution (created in `build/install/spring-boot-template` directory)
-by executing the following command:
+When the project has been packaged in `target/` directory, 
+you can run it by executing following command:
 
 ```bash
-  docker-compose up
+docker-compose up
 ```
 
-This will start the API container exposing the application's port
-(set to `4455` in this template app).
+As a result the following containers will get created and started:
 
-In order to test if the application is up, you can call its health endpoint:
+ - API exposing port `4455`
+
+## Endpoints
+
+Authorization and ServiceAuthorization (S2S) tokens are required in the headers for all endpoints. All APIs are authorised with some service level permissions captured in the the configurables rules under service_config.json file (https://github.com/hmcts/ccd-case-document-am-api/blob/readme_update/src/main/resources/service_config.json). 
+
+```
+GET /cases/documents/{documentId}
+```
+- Retrieves json representation of the document metadata from doc-store. 
+```
+GET /cases/documents/{documentId}/binary
+```
+- Streams contents of the most recent Document Content Version associated with the Stored Document. 
+```
+GET /cases/documents/{documentId}/token
+```
+- Returns the hashed token required for document upload functionality. Initially this API is reserved only for the bulk_scan_processor service.
+```
+POST /cases/documents
+```
+- Used for uploading any case related documents to doc-store.
+
+        Also requires a request body containing
+        - classification {string}
+        - files {multipart/form-data}
+        - caseTypeId {string}
+        - jurisdictionId {string}
+```
+PATCH /cases/documents/{documentId}
+```
+- Used to update the TTL(time to live) value for any case related document in doc-store. 
+
+        Also requires a request body containing
+        - ttl {string}
+```
+PATCH /cases/documents/attachToCase
+```
+- Will be exposed only for ccd-data-store application and utilised in a service to service call for attaching documents to their corresponding case while submitting case create/update with document.
+
+        Also requires a request body containing
+        - CaseDocumentMetadata {objects}
+```
+DELETE /cases/documents/{documentId}
+```
+- Will delete any case related documents from doc-store
+
+        Also requires a request param for
+        - permanent {boolean}
+
+### Functional Tests
+The functional tests are located in `functionalTest` folder. These are the tests run against an environment. For example if you would 
+like to test your local environment you'll need to export the following variables on your `.bash_profile` script.
+
 
 ```bash
-  curl http://localhost:4455/health
+#Smoke/Functional Tests
+export BEFTA_S2S_CLIENT_ID=ccd_gw
+export BEFTA_S2S_CLIENT_SECRET=AAAAAAAAAAAAAAAC
+export BEFTA_RESPONSE_HEADER_CHECK_POLICY=JUST_WARN
+export CASE_DOC_AM_URL=http://localhost:4455
+export DM_STORE_URL=http://localhost:4506
+export CCD_BEFTA_CITIZEN_2_PWD=Pa55word11
+export CCD_BEFTA_CASEWORKER_2_SOLICITOR_1_PWD=Pa55word11
+export DM_STORE_BASE_URL=http://localhost:4506
+export API_CLIENT_DATA_STORE_ID=ccd_data
+export API_CLIENT_DATA_STORE_SECRET=AAAAAAAAAAAAAAAB
+export CASE_DOCUMENT_AM_URL=http://localhost:4455
+export API_CLIENT_BULK_SCAN_PROCESSOR_ID=bulk_scan_processor
+export API_CLIENT_BULK_SCAN_PROCESSOR_SECRET=AAAAAAAAAAAAAAAA
+export CCD_DATA_STORE_URL=http://localhost:4452
+export CCD_DM_DOMAIN=http://localhost:4455
+export API_CLIENT_XUI_WEBAPP_ID=xui_webapp
+export API_CLIENT_XUI_WEBAPP_SECRET=AAAAAAAAAAAAAAAA
+export DOCUMENT_STORE_URL=http://localhost:4506
 ```
 
-You should get a response similar to this:
+These tests also rely on the `CCD_BEFTA_JURISDICTION2.xlsx` file to be already imported. This file should be available in your local environment already.
 
+####Running the tests
+
+In order to run the tests you will need to pull down ```ccd-docker``` repo and checkout the ```AM-CCD_Docker_Custom_Setup_For_Case_Document_API``` branch.
+
+Then pull down ```ccd-case-document-utilities``` repo and update the following lines in ```env-main.sh``` to match your local file structure.
 ```
-  {"status":"UP","diskSpace":{"status":"UP","total":249644974080,"free":137188298752,"threshold":10485760}}
-```
-
-### Alternative script to run application
-
-To skip all the setting up and building, just execute the following command:
-
-```bash
-./bin/run-in-docker.sh
-```
-
-For more information:
-
-```bash
-./bin/run-in-docker.sh -h
+###### Please provide Docker project location please
+DOCKER_REPO='/Users/{username}/HMCTS-Projects/AM/ccd-docker'
+###### Please provide "ccd-case-document-utilities/auto-environment/idam-ui-automation" location
+WEB_REPO='/Users/{username}/HMCTS-Projects/AM/ccd-case-document-utilities/auto-environment/idam-ui-automation'
+###### Please provide "ccd-case-document-utilities/auto-environment/bin" location
+CURRENT_LOCATION='/Users/736062/HMCTS-Projects/AM/ccd-case-document-utilities/auto-environment/bin'
 ```
 
-Script includes bare minimum environment variables necessary to start api instance. Whenever any variable is changed or any other script regarding docker image/container build, the suggested way to ensure all is cleaned up properly is by this command:
+Run the scripts that follow.
+Once this is done, try to run your functional tests.
 
-```bash
-docker-compose rm
-```
+## LICENSE
 
-It clears stopped containers correctly. Might consider removing clutter of images too, especially the ones fiddled with:
-
-```bash
-docker images
-
-docker image rm <image-id>
-```
-
-There is no need to remove postgres and java or similar core images.
-
-## Hystrix
-
-[Hystrix](https://github.com/Netflix/Hystrix/wiki) is a library that helps you control the interactions
-between your application and other services by adding latency tolerance and fault tolerance logic. It does this
-by isolating points of access between the services, stopping cascading failures across them,
-and providing fallback options. We recommend you to use Hystrix in your application if it calls any services.
-
-### Hystrix circuit breaker
-
-This template API has [Hystrix Circuit Breaker](https://github.com/Netflix/Hystrix/wiki/How-it-Works#circuit-breaker)
-already enabled. It monitors and manages all the`@HystrixCommand` or `HystrixObservableCommand` annotated methods
-inside `@Component` or `@Service` annotated classes.
-
-### Other
-
-Hystrix offers much more than Circuit Breaker pattern implementation or command monitoring.
-Here are some other functionalities it provides:
- * [Separate, per-dependency thread pools](https://github.com/Netflix/Hystrix/wiki/How-it-Works#isolation)
- * [Semaphores](https://github.com/Netflix/Hystrix/wiki/How-it-Works#semaphores), which you can use to limit
- the number of concurrent calls to any given dependency
- * [Request caching](https://github.com/Netflix/Hystrix/wiki/How-it-Works#request-caching), allowing
- different code paths to execute Hystrix Commands without worrying about duplicating work
-
-## License
-
-This project is licensed under the MIT License - see the [LICENSE](LICENSE) file for details
+This project is licensed under the MIT License - see the [LICENSE](LICENSE.md) file for details.
